--- a/static/css/index.css
+++ b/static/css/index.css
@@ -3,12 +3,11 @@
     padding: 0px;
 }
 
-/*以下是header1的相關設定*/
+/*>以下是header1的相關設定*/
 
 .header1_area{
     width: 100%;
     height: 54px;
-    background-color: #FFFFFF;
 }
 
 .header1_for_fixed{
@@ -150,7 +149,7 @@
     justify-content: center;
 }
 
-/*以下是整個main區塊的相關設定*/
+/*>以下是整個main區塊的相關設定*/
 
 .main_layout{
     padding: 40px 0px 40px 0px;
@@ -257,6 +256,7 @@ article{
     width: 100%;
     height: 197px;
     position: relative;
+    cursor: pointer;
 }
 
 .name_and_image_layout > figure{
@@ -269,6 +269,10 @@ article{
     height: 100%;
     object-fit: cover;
     object-position: center;
+}
+
+.attraction_image:hover{
+    opacity: 0.7;
 }
 
 figcaption{
@@ -369,7 +373,7 @@ footer > div{
 .section_layout_for_one_to_four,
 .section_layout_for_one_to_twelve{
     height: 100%;
-    grid-template: 1fr 1fr / 1fr 1fr;
+    grid-template: 1fr / 1fr 1fr;
 }
 }
 
